# cpp-synth-update

./: .gitignore  CMakeLists.txt
cpp-synth/: Synth.cpp  Synth.h  imgui_includes.h  main.cpp  portaudio.h  wavetable.cpp  wavetable.h
imgui/: imgui_demo.cpp
